<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:title="">
            <menu>
                <item android:id="@+id/reviews"
                    android:title="@string/reviews"
                    android:icon="@drawable/star"
                    />
                <item android:id="@+id/favorites"
                    android:title="@string/favorites"
                    android:icon="@drawable/favorite"
                    />
                <item android:id="@+id/search_book"
                    android:title="@string/search_book"
                    android:icon="@drawable/search_book"
                    />
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:title="">
            <menu>
                <item android:id="@+id/profile"
                    android:title="@string/profile"
                    android:icon="@drawable/user_prof"
                    />
                <item android:id="@+id/settings"
                    android:title="@string/settings"
                    android:icon="@drawable/gear"
                    />
            </menu>
        </item>
    </group>
</menu>